<resources>
    <string name="app_name">Sequence</string>
    <string name="welcome">Welcome to Sequence!</string>
    <string name="tap">(Tap anywhere to continue)</string>
    <string name="back">Back</string>
    <string name="help">How To Play</string>
    <string name="instruct">Each level will have a number of moves (same as the level)
            which you must determine.</string>
    <string name="right">If you tap the correct direction, a green light will appear, a ding will
        sound and you can make the next move.
    </string>
    <string name="wrong">If it is incorrect, a red light will appear, a buzz will sound and your
        sequence will reset.</string>
    <string name="next">You may proceed to the next level if you find the correct sequence.</string>
    <string name="next_more">You may proceed to the next level if you find the correct sequence.
        (Tap anywhere to continue)</string>
    <string name="me">About the Developer</string>
    <string name="jayden">I am a first year student at U of T Scarborough, studying Computer
        Science. This app is my first app, and I will continue to develop more in the future. I
        hope you enjoy the app. Special thanks to dmf444 for helping me in the development of this
        app, and to ThatGuy for trying to break the app.
    </string>
    <string name="jayden_dev">! am a first year student at U of T Scarborough, studying Computer
        Science. This app is my first app, and ! will continue to develop more in the future. !
        hope you enjoy the app. Special thanks to dmf444 for helping me in the development of this
        app, and to ThatGuy for trying to break the app.
    </string>
    <string name="copyright">Copyright</string>
    <string name="ownership">I do not own any of the rights to the pictures or music for this app.
        All rights reserved to their respective owners. This app has no intention of monetary gain.
    </string>
    <string name="musicOn">In Game Music: On</string>
    <string name="music_off">In Game Music: Off</string>
    <string name="title_activity_typeface_util">TypefaceUtil</string>
    <string name="soundsOn">In Game Sounds: On</string>
    <string name="sounds_off">In Game Sounds: Off</string>
    <string name="indicator_small">Indicator Size: S</string>
    <string name="indicator_medium">Indicator Size: M</string>
    <string name="indicator_large">Indicator Size: L</string>

    <string name="title">Sequence</string>
    <string name="main">Classic</string>
    <string name="time">Time Attack</string>
    <string name="time_instructions">Finish as many levels as you can in the time</string>
    <string name="levels">Beat the Clock</string>
    <string name="level_instructions">Finish the given levels as fast as you can</string>
    <string name="settings">Settings</string>
    <string name="unlockables">Unlockables</string>
    <string name="back_title">Are you sure?</string>
    <string name="next_level">Next Level</string>

    <string name="confirm">Return to the main menu? Your highscore will be saved.
    </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="begins">Game Begins In</string>
    <string name="half">30 Seconds</string>
    <string name="one">60 Seconds</string>
    <string name="one_half">90 Seconds</string>
    <string name="two">120 Seconds</string>
    <string name="two_half">150 Seconds</string>
    <string name="three">180 Seconds</string>

    <string name="level">Level</string>
    <string name="five">Level 5</string>
    <string name="seven">Level 7</string>
    <string name="ten">Level 10</string>
    <string name="fifteen">Level 15</string>

    <string name="highscores">Highscores</string>
    <string name="highest_level">Highest Level: </string>
    <string name="timed">Time Attack</string>

    <string name="use">Use</string>
    <string name="selected">Selected</string>
    <string name="return_menu">Return to menu</string>
    <string name="move">Move</string>

    <string name="classic">\"The classic. If you\'re using this you\'ve probably unlocked
        nothing.\"</string>
    <string name="invert">\"The inverted set. Keys are the wrong way yknow. Green is bad, and red
    is good. Simple.\"</string>
    <string name="invisible">\"The invisible set. Yeah. I\"m sure you\'ll find a way to use this.\"</string>
    <string name="simon">\"Simon says press yellow. Or red. Or blue. Or green. Just pick the right
        one.\"</string>
    <string name="pc">\"The PC gamer. WASD you know it. \"</string>
    <string name="xbox">\"The Y-Box gamer. Like Y-Box 360, Y-Box One, the game Hay Low, all that.\"</string>
    <string name="ps3">\"The Paystation gamer. PS1, PS2, PS3, PS4, Big Little Planet.\"</string>
    <string name="cards">\"The card dealer. Heart, diamonds, clubs, spades. Ace it or be a joke(r).\"</string>
    <string name="ddr">\"The Pants Pants Revolution skin. Make sure to time it right, er well actually
        it doesn\'t really matter.\"</string>

    <string-array name="arrows">
        <item>@string/classic</item>
        <item>@string/invert</item>
        <item>@string/invisible</item>
        <item>@string/simon</item>
        <item>@string/pc</item>
        <item>@string/xbox</item>
        <item>@string/ps3</item>
        <item>@string/cards</item>
        <item>@string/ddr</item>
    </string-array>

    <string name="how1">Have this skin as a gift, it\'s on the house.</string>
    <string name="how2">Score at least 5 in classic or time attack.</string>
    <string name="how3">Score at least 10 in classic or time attack.</string>
    <string name="how4">Score at least 15 in classic.</string>
    <string name="how5">Score at least 20 in classic.</string>
    <string name="how6">Score at least 10 in time attack.</string>
    <string name="how7">Score at least 10 in time attack.</string>
    <string name="how8">Achieve a time of under 20 seconds for beat the clock level 5.</string>
    <string name="how9">Achieve a time of under 40 seconds for beat the clock level 7.</string>

    <string name="info">Determine the sequence of the level. The level number represensts the number
        of moves you must determine. A correct moves is indicated by a green light and a ding. A
        wrong move is indicated by a red light and a buzz. </string>

    <string-array name="howto">
        <item>@string/how1</item>
        <item>@string/how2</item>
        <item>@string/how3</item>
        <item>@string/how4</item>
        <item>@string/how5</item>
        <item>@string/how6</item>
        <item>@string/how7</item>
        <item>@string/how8</item>
        <item>@string/how9</item>
    </string-array>

</resources>
