<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.datrueonejay.canyouescape.MainMenu">

    <com.datrueonejay.canyouescape.MyCustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/title"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue"
        android:textSize="50sp"
        android:padding="3dp"
        android:layout_marginBottom="15dp"/>

    <com.datrueonejay.canyouescape.MyCustomButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main"
        android:layout_below="@+id/title"
        android:text="@string/main"
        android:textSize="24sp"
        android:padding="3dp"
        android:layout_marginBottom="15dp"/>

    <com.datrueonejay.canyouescape.MyCustomButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:layout_below="@+id/main"
        android:text="@string/time"
        android:textSize="24sp"
        android:padding="3dp"
        android:layout_marginBottom="15dp"/>

    <com.datrueonejay.canyouescape.MyCustomButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settings"
        android:layout_below="@+id/time"
        android:text="@string/settings"
        android:textSize="24sp"
        android:padding="3dp"
        android:layout_marginBottom="15dp"/>

    <com.datrueonejay.canyouescape.MyCustomButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/highscores"
        android:layout_below="@+id/settings"
        android:text="@string/highscores"
        android:textSize="24sp"
        android:padding="3dp"
        android:layout_marginBottom="15dp"/>

</RelativeLayout>
