<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/back_window">

    <com.datrueonejay.canyouescape.MyCustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/back_title"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="#FFF"
        android:id="@+id/title"
        android:background="@color/blue"
        android:layout_marginBottom="15dp"/>

    <com.datrueonejay.canyouescape.MyCustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:id="@+id/confirmation"
        android:layout_below="@+id/title"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"/>

    <com.datrueonejay.canyouescape.MyCustomButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmation"
        android:text="@string/yes"
        android:id="@+id/yes"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"/>

    <com.datrueonejay.canyouescape.MyCustomButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yes"
        android:text="@string/no"
        android:id="@+id/no"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"/>

</RelativeLayout>