<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_instructions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80FFFFFF"
    android:padding="5dp"
    android:animateLayoutChanges="true"
    tools:context="com.datrueonejay.canyouescape.Instructions">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF">

        <com.datrueonejay.canyouescape.MyCustomButton
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/screen"
            android:background="#80FFFFFF" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF">

        <com.datrueonejay.canyouescape.MyCustomTextView
            android:padding="3dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/mid" />

        <com.datrueonejay.canyouescape.MyCustomTextView
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0032EC"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:id="@+id/welcome"
            android:textSize="24sp"
            android:layout_marginBottom="15dp"
            android:textColor="#FFF"/>

        <com.datrueonejay.canyouescape.MyCustomTextView
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/instruct"
            android:textSize="24sp"
            android:textColor="#FFF"
            android:background="#0032EC"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/welcome"
            android:id="@+id/instructions"
            android:layout_marginBottom="15dp"
            android:visibility="gone" />

        <com.datrueonejay.canyouescape.MyCustomTextView
            android:padding="3dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:background="#0032EC"
            android:layout_below="@+id/instructions"
            android:id="@+id/right"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
            />


        <com.datrueonejay.canyouescape.MyCustomTextView
            android:padding="3dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrong"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:background="#0032EC"
            android:layout_below="@+id/right"
            android:id="@+id/wrong"
            android:visibility="gone" />

        <com.datrueonejay.canyouescape.MyCustomTextView
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_more"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:background="#0032EC"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="15dp"
            android:id="@+id/next"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wrong"
            android:layout_toLeftOf="@+id/mid"
            android:layout_above="@+id/next"
            android:src="@drawable/right"
            android:id="@+id/pic"
            android:visibility="gone"/>


        <ImageView
            android:id="@+id/pic_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wrong"
            android:layout_toRightOf="@+id/mid"
            android:layout_above="@+id/next"
            android:src="@drawable/wrong"
            android:visibility="gone" />
    </RelativeLayout>


</FrameLayout>
