<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings_instructions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:padding="5dp"
    android:background="#80FFFFFF"
    tools:context="com.datrueonejay.canyouescape.SettingsInstructions"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:background="#80FFFFFF">

        <com.datrueonejay.canyouescape.MyCustomTextView
            android:padding="3dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/mid" />

        <com.datrueonejay.canyouescape.MyCustomTextView
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/instruct"
            android:textSize="18sp"
            android:textColor="#FFF"
            android:background="#0032EC"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/close"
            android:id="@+id/instructions"
            android:layout_marginBottom="15dp"
        />

        <com.datrueonejay.canyouescape.MyCustomTextView
            android:padding="3dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:textSize="18sp"
            android:textColor="#FFF"
            android:background="#0032EC"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/instructions"
            android:layout_marginBottom="15dp"
            android:id="@+id/right"/>

        <com.datrueonejay.canyouescape.MyCustomTextView
            android:padding="3dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong"
            android:textSize="18sp"
            android:textColor="#FFF"
            android:background="#0032EC"
            android:layout_below="@+id/right"
            android:layout_marginBottom="15dp"
            android:id="@+id/wrong"
            />

        <ImageView
            android:layout_toLeftOf="@+id/mid"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_below="@+id/wrong"
            android:src="@drawable/right"
            android:id="@+id/pic"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/next"
            />

        <ImageView
            android:layout_toRightOf="@+id/mid"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_below="@+id/wrong"
            android:layout_above="@+id/next"
            android:src="@drawable/wrong"
            android:id="@+id/pic_two"
            android:layout_centerHorizontal="true"
            />

        <com.datrueonejay.canyouescape.MyCustomTextView
            android:padding="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="18sp"
            android:textColor="#FFF"
            android:background="#0032EC"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:textAlignment="center"
            android:paddingTop="15dp"
            android:id="@+id/next"/>

        <com.datrueonejay.canyouescape.MyCustomButton
            android:padding="3dp"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X"
            android:textAlignment="textStart"
            android:gravity="start"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/close"
            android:textSize="24sp"
            android:textColor="#000"/>

    </RelativeLayout>

</RelativeLayout>
